# fastapi-scrapy-kafka-aiogram

./: .env.example  .gitignore  docker-compose.yml
services/currency/: Dockerfile  pyproject.toml
services/currency/currency_app/: scrapy.cfg
services/currency/currency_app/currency_app/: .env.example  controller.py  items.py  main.py  middlewares.py  pipelines.py  settings.py
services/currency/currency_app/currency_app/spiders/: currency_v1.py
services/notify/: Dockerfile  pyproject.toml
services/notify/app/: bot.py  consumer.py  logger.py  main.py
services/notify/app/infrastructure/: config.py
services/web/: .env.example  Dockerfile  main.py  pyproject.toml
services/web/api/: server.py
services/web/api/routes/v1/: __init__.py
services/web/api/routes/v1/public/: __init__.py
services/web/api/routes/v1/public/currency/: __init__.py  create_currency_info.py  router.py
services/web/core/kafka/: producer.py
services/web/infrastructure/: config.py
services/web/shared/schemas/: __init__.py  message.py
