[tool.poetry]
name = "notify"
version = "0.1.0"
description = ""
authors = ["elert.2020 <elert.2020@corp.nstu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
aiokafka = "^0.11.0"
loguru = "^0.7.2"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
